workloads/frontend/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  creationTimestamp: "2019-11-21T22:07:06Z"
  labels:
    app.kubernetes.io/instance: frontend
  name: frontend
spec:
  host: frontend-team1.apps-crc.testing
  port:
    targetPort: 9898
  subdomain: ""
  to:
    kind: Service
    name: frontend
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - conditions:
        - status: 'True'
          type: Admitted
